@@ -2,6 +2,8 @@ This file documents the revision history for the SNClient+ agent.
 
 next:
          - drop privileges when running node exporter
+         - update node exporter to 1.7.0
+         - add node exporter to osx packages
          - fix reading empty config files (#58)
 
 0.12     Tue Nov  7 23:52:33 CET 2023
